# rust-playground

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  cargo-generate.toml  rust-toolchain.toml  setup.sh
.devcontainer/: devcontainer.json  setup.sh
cargo-templates/lib/src/: lib.rs
docker-compose/: .env  docker-compose-elastic.yml  docker-compose-kafka.yml  docker-compose-postgres.yml  docker-compose-project.yml  docker-compose-project3.yml
frontend/common/: Cargo.toml  Makefile.toml
frontend/common/src/: api.rs
frontend/public/: index.html
frontend/static-wasm/: Cargo.toml  index.html
frontend/static-wasm/src/: lib.rs  main.rs
frontend/static-wasm/src/app/: mod.rs
frontend/static-wasm/src/components/: footer.rs  header.rs  mod.rs
frontend/static-wasm/src/pages/: about.rs  blog.rs  careers.rs  contact.rs  home.rs  home_dk.rs  mod.rs  privacy_policy.rs  services.rs  terms_conditions.rs
frontend/static-wasm/src/sections/: cta_content.rs  featured_blogs.rs  hero_home.rs  intro.rs  latest_blogs.rs  mod.rs  our_services.rs  testimonials.rs
frontend/static-wasm/src/styles/: app.css  css2
frontend/static-wasm/tests/: web.rs
frontend/webapp/: Cargo.toml  Makefile.toml  index.html
frontend/webapp-wasm/: Cargo.toml  index.html
frontend/webapp-wasm/src/: error.rs  lib.rs  main.rs
frontend/webapp-wasm/src/app/: editor.rs  login.rs  register.rs  settings.rs
frontend/webapp-wasm/src/app/article/: article_meta.rs  comment.rs  comment_input.rs
frontend/webapp-wasm/src/components/: article_preview.rs  header.rs  user_context_provider.rs
frontend/webapp-wasm/src/hooks/: use_user_context.rs
frontend/webapp-wasm/src/services/: articles.rs  auth.rs  comments.rs  mod.rs  profiles.rs  requests.rs  tags.rs  urls.rs
frontend/webapp-wasm/tests/: web.rs
frontend/webapp/docker/: Dockerfile
frontend/webapp/src/: lib.rs
frontend/webapp/src/components/: login_form.rs  mod.rs
frontend/webapp/src/pages/: login.rs  mod.rs
frontend/webapp/src/services/: http_client.rs  mod.rs
frontend/webapp/tests/: web.rs
helm-charts/charts/actix-api/: Chart.yaml  values.yaml
helm-charts/charts/actix-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-charts/charts/actix-api/templates/tests/: test-connection.yaml
libs/logging/: Cargo.toml  Makefile.toml
libs/logging/src/: lib.rs
libs/model/: Cargo.toml
libs/model/src/: lib.rs
libs/model/src/types/: auth.rs
services/dieseldb/: Cargo.toml  Makefile.toml
services/dieseldb/migrations/00000000000000_diesel_initial_setup/: up.sql
services/dieseldb/schema/: Cargo.toml  Makefile.toml
services/dieseldb/schema/src/: lib.rs
services/dieseldb/src/: main.rs
services/kafkatransform/: Cargo.toml
services/kafkatransform/docker/: Dockerfile
services/kafkatransform/src/: main.rs
services/kafkatransform/src/consumer/: mod.rs  my_consumer.rs
web-apis/actix-api/: Cargo.toml  Makefile.toml
web-apis/actix-api/docker/: Dockerfile  run.sh
web-apis/actix-api/src/: main.rs
web-apis/actix-auth-api/: Cargo.toml
web-apis/actix-auth-api/docker/: Dockerfile
web-apis/actix-auth-api/src/: main.rs
web-apis/actix-auth-api/tests/: main.rs
web-apis/rocket-api/: Cargo.toml
web-apis/rocket-api/src/: main.rs  tests.rs
web-apis/rocket-api/src/routes/: auth.rs
web-apis/rocket-api/tests/: main.rs
