[workspace]

members = [
    "services/kafkatransform",
    "services/dieseldb",
    "services/dieseldb/schema",
    "web-apis/actix-api",
    "web-apis/actix-auth-api",
    "web-apis/rocket-api",
    #"frontend/common",
    #"frontend/webapp",
    #Internal
    "libs/model",
    "libs/logging"
]

[workspace.dependencies]
log = "0.4.17"
log4rs = "1.2.0"
tracing = "0.1.37"
serde_json = "1.0.91"
serde = "1.0.152"
wasm-bindgen = "0.2.67"
wasm-bindgen-test = "0.3.33"
