[package]
name = "dieseldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15"
log = { workspace = true }
log4rs = { workspace = true }
tracing = { workspace = true }
logging = { path = "../../libs/logging" }
