[package]
name = "kafkatransform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
tracing = { workspace = true }
