[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
log4rs = { workspace = true }
tracing = { workspace = true }
rocket = "0.5.1"
rocket_okapi = { version = "0.9", features = ["swagger"] }
schemars = "0.8"
logging = { path = "../../libs/logging" }
model = { path = "../../libs/model" }
